<resources>
    <string name="app_name">Notification</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="button_login">sign in</string>
    <string name="button_signup">sign up</string>
    <string name="singup_hint_username">User name</string>
    <string name="signupactivity_toast_blank">Please enter everything</string>
    <string name="signupactivity_toast_sucess">Sign up successful</string>
    <string name="signupactivity_progressdal_title">Please wait a moment</string>
    <string name="signinactivity_toast_success">Sign in successful</string>
    <string name="selectmodeactivity_title">Select Mode</string>
    <string name="selectview_title_receive">Receive Notifications</string>
    <string name="selectview_title_send">Send Notifications</string>
    <string name="selectview_sub_send">Share notifications on this phone with other devices</string>
    <string name="selectview_sub_receive">Only receive notification from this phone from another device</string>
    <string name="selectview_button_select">Select</string>
    <string name="selectmodeactivity_toast_select">Please select a mode</string>
    <string name="mainactivity_toast_error">An error occurred. Please choose again.</string>
    <string name="selectmodeactivity_dialog_title">Request Notification Permission</string>
    <string name="mainactivity_dialog_massage">Notification permissions are required to read Notification</string>
    <string name="mainactivity_dialog_ok">Allow</string>
    <string name="mainactivity_dialog_deny">Deny</string>
    <string name="mainactivity_toast_deny">You can\'t send Notification because of can\'t read Notification</string>
</resources>
