<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <android.support.v7.widget.CardView
            app:cardCornerRadius="10dp"
            app:cardUseCompatPadding="true"
            android:id="@+id/selectmode_card_send"
            app:contentPadding="10dp"
            android:clickable="true"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:gravity="center_vertical"
        android:orientation="horizontal">

            <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_marginRight="5dp" android:id="@+id/select_radio_send"/>

            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:orientation="vertical">

                <TextView
                        android:text="@string/selectview_title_send"
                        android:layout_width="match_parent"
                        android:textSize="23dp"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:layout_marginLeft="5dp"
                        android:text="@string/selectview_sub_send"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>



    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
            app:cardCornerRadius="10dp"
            app:cardUseCompatPadding="true"
            android:clickable="true"
            app:contentPadding="10dp"
            android:id="@+id/selectmode_card_receive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="horizontal" android:gravity="center_vertical">

            <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content"
                         android:layout_marginRight="5dp" android:id="@+id/select_radio_receive"/>

            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:orientation="vertical">
                <TextView
                        android:text="@string/selectview_title_receive"
                        android:layout_width="match_parent"
                        android:textSize="23dp"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:layout_marginLeft="5dp"
                        android:text="@string/selectview_sub_receive"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>



    </android.support.v7.widget.CardView>

</LinearLayout>